re-write of ProdMan Sync and update to java 21