@@ -5,13 +5,14 @@ plugins {
 subprojects {
     apply(plugin = "java")
     java {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
     tasks.withType<JavaCompile> {
         options.compilerArgs.add("-Werror")
-        options.compilerArgs.add("-Xlint")
+        options.compilerArgs.add("-Xlint:-this-escape")
+        options.compilerArgs.add("--enable-preview")
     }
     apply(plugin = "idea")
     idea {
